src/frontend/styles/index.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Raleway', sans-serif;
}

body {
    background-color: rgb(84, 77, 77);
}

.title-area {
    background-color: #222222;
    height: 300px;
}

.banner {
    display: flex;
    height: 300px;
    width: 100%;
    justify-content: center;
    align-items: center;
}

.banner .fa-solid {
    font-size: 54px;
    margin: 0 15px;
    color: rgb(230, 228, 228);
}

.overlay-content {
    display: flex;
    justify-content: space-between;
    color: rgb(200, 200, 200);
    margin-top: -200px;
}

.overlay-content h1 {
    font-size: 54px;
    margin-left: 20px;
    padding-top: 120px;
}

.overlay-content ul {
    font-family: 'Cousine', monospace;
    list-style-type: none;
    margin-left: -50px;
    font-weight: 500;
}

.overlay-content li {
    margin: 15px;
    font-size: 28px;
}

.link-area {
    display: flex;
    justify-content: center;
    background-color: rgba(110, 146, 122, 0.769);
}

.link-area a {
    color:black;
    margin: 0 10px;
}

.link-area a:visited {
    color: black;
}

.link-item {
    border: 3px solid rgba(99, 106, 98, 0.42);
    border-radius: 10px;
    margin: 50px 15px;
    box-shadow: -10px 1px 38px -4px rgba(99, 106, 98, 0.42);
    -webkit-box-shadow: -10px 1px 38px -4px rgba(99, 106, 98, 0.42);-moz-box-shadow: -10px 1px 38px -4px rgba(99, 106, 98, 0.42);
}

.link-item:hover .link-item-content * {
    color: white;
}

.link-item:hover {
    border-color: white;
    box-shadow: 2px -2px 102px -13px rgba(255,255,255,0.68);
    -webkit-box-shadow: 2px -2px 102px -13px rgba(255,255,255,0.68);
    -moz-box-shadow: 2px -2px 102px -13px rgba(255,255,255,0.68);
    -webkit-transition: all 0.15s ease-in;
    -moz-transition: all 0.15s ease-in;
    -o-transition: all 0.15s ease-in;
    transition: all 0.15s ease-in;
}

.link-item a {
    text-decoration: none;
    justify-items: center;
    display: inline-block;
    padding: 35px;
}

.link-item .fa-item {
    font-size: 64px;
    color: rgb(35, 34, 34);
    text-shadow: 4px 4px 12px rgba(0,0,0,0.44);
}

.link-item a:hover{
    text-shadow: 1px 0px 29px rgba(255,255,255,1);
    -webkit-transition: all 0.15s ease-in;
    -moz-transition: all 0.15s ease-in;
    -o-transition: all 0.15s ease-in;
    transition: all 0.15s ease-in;
}

.link-item p {
    text-align: center;
    margin-top: 15px;
}

footer {
    display: flex;
    background-color: #313030;
    justify-content: space-between;
    height: 100%;
    color: white;
}

footer a{
    color: white;
}

.footer .info {
    margin: 15px;
}

.footer .site-map-container {
    margin: 15px;
}

.site-map-container li {
    list-style: none;
}

.site-map-container a {
    text-decoration: none;
}

.site-map-container a:hover {
    color: rgb(132, 132, 132);
    transition: all 0.1s ease-in;
}

@media (max-width: 600px) {
    .title-area {
        height: 325px;
    }
    .overlay-content {
        flex-direction: column;
    }
    .overlay-content h1 {
        display: inline;
        font-size: 24px;
        margin: 0 auto;
        font-size: 2.6em;
    }
    .overlay-content ul {
        margin: 0;
        margin-top: 10px;
    }
    .overlay-content li {
        font-size: 14px;
        display: inline;
    }
    .link-area {
        flex-direction: column;
    }
    .link-item {
        margin: 20px 15px;
    }
    .link-item-content{
        display: flex;
    }
    .link-item-content p {
        margin-left: 55%;
        font-size: 2em;
    }
}

